--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,32 @@ author_profile: true
 
 {% include base_path %}
 
+<p>I have taught courses in computational linguistics, natural language processing, and computer science across multiple universities in France, Canada, and Switzerland. My teaching experience spans from Bachelor's to Master's level, totaling 126 hours equivalent TD.</p>
+
+<h2>Teaching Experience by Institution</h2>
+
+<h3>Université Sorbonne Nouvelle, Paris, France (116 HTD)</h3>
+<ul>
+  <li><strong>Computational Linguistics</strong> - Master 1 (2022-2024): 36 HCM over three consecutive years</li>
+  <li><strong>Computer-based Exploration of Annotated Corpora</strong> - Bachelor 3 (2021-2023): 48 HTD</li>
+  <li><strong>Introduction to NLP</strong> - Master 2 ENEAD (distance learning) (2022-2023): 14 HTD</li>
+</ul>
+
+<h3>Université de Rouen Normandie, Rouen, France (10 HTD)</h3>
+<ul>
+  <li><strong>Natural Language Processing</strong> - Master 2 (2023-2024): 10 HTD</li>
+</ul>
+
+<h3>Université de Montréal, Montréal, Canada</h3>
+<ul>
+  <li><strong>Introduction to Artificial Intelligence</strong> - Bachelor 3 (2021)</li>
+  <li><strong>Object-Oriented Programming</strong> - Bachelor/Master (2020-2021)</li>
+</ul>
+
+<hr>
+
+<h2>Course Details</h2>
+
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
